--- a/package.json
+++ b/package.json
@@ -1,15 +1,17 @@
 {
-  "name": "backend-desafio",
+  "name": "mussum-academy",
   "version": "1.0.0",
   "main": "app.ts",
   "license": "MIT",
   "scripts": {
     "build": "tsc",
     "dev": "ts-node-dev --inspect --transpileOnly --ignore-watch node_modules src/server.ts",
-    "typeorm": "node --require ts-node/register ./node_modules/typeorm/cli.js"
+    "typeorm": "node --require ts-node/register ./node_modules/typeorm/cli.js",
+    "start": "node dist/server.js"
   },
   "devDependencies": {
     "@types/express": "^4.17.5",
+    "@types/node": "^14.0.5",
     "@typescript-eslint/eslint-plugin": "^2.27.0",
     "@typescript-eslint/parser": "^2.27.0",
     "eslint": "^6.8.0",
@@ -23,7 +25,7 @@
     "typescript": "^3.8.3"
   },
   "dependencies": {
-    "@types/node": "^14.0.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "pg": "^8.2.1",
     "reflect-metadata": "^0.1.13",
